components/drone/drone-runner-kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner-kube
  namespace: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-runner-kube
  template:
    metadata:
      labels:
        app: drone-runner-kube
    spec:
      serviceAccountName: drone-runner-kube
      containers:
      - name: drone-runner-kube
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "500m"
