components/drone/drone-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-server
  namespace: drone
spec:
  selector:
    app: drone-server
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: ClusterIP
