components/drone/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-postgres
  namespace: drone
spec:
  selector:
    app: drone-postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  type: ClusterIP
